--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -134,8 +134,8 @@ slider-component .slider-buttons {
   border: 0.1rem solid rgba(var(--color-foreground), 0.08);
   background-color: rgb(var(--color-background));
   cursor: pointer;
-  width: 44px;
-  height: 44px;
+  width: 30px;
+  height: 30px;
 }
 
 .slider-button:not([disabled]):hover {
@@ -151,6 +151,10 @@ slider-component .slider-buttons {
 .slider-buttons--overlay .slider-button {
   margin-top: -1px;
   margin-bottom: -1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .slider-buttons--overlay .slider-button + .slider-button {
