--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -434,6 +434,7 @@ a.product__text {
 .product__media-item > * {
   display: block;
   position: relative;
+  width: 100%;
 }
 
 .product__media-toggle {
@@ -483,7 +484,7 @@ a.product__text {
 
 .product-media-modal__content > *:not(.active),
 .product__media-list .deferred-media {
-  display: none;
+  /* display: none; */
 }
 
 @media screen and (min-width: 750px) {
