--- a/snippets/main-collection-product-grid-2.liquid
+++ b/snippets/main-collection-product-grid-2.liquid
@@ -504,7 +504,7 @@
       </div>
     </details>
     <collection-filters-form>
-      <form id="CollectionFiltersFormMobile" >
+      <form id="CollectionFiltersFormMobile-2" >
         <div class="">
           <div class="mobile-facets__main">
             
@@ -525,7 +525,7 @@
                     <ul class="mobile-facets__list list-unstyled" role="list">
                       {%- for value in filter.values -%}
                         <li class="mobile-facets__item list-menu__item">
-                          <label for="Filter-{{ filter.label | escape }}-mobile-{{ forloop.index }}" class="mobile-facets__label{% if value.count == 0 and value.active == false %} mobile-facets__label--disabled{% endif %}">
+                          <label  class="mobile-facets__label{% if value.count == 0 and value.active == false %} mobile-facets__label--disabled{% endif %}">
                             <input class="mobile-facets__checkbox" type="checkbox" name="{{ value.param_name }}" value="{{ value.value }}" id="Filter-{{ filter.label | escape }}-mobile-{{ forloop.index }}"
                               {% if value.active %}checked{% endif %}
                               {% if value.count == 0 and value.active == false %}disabled{% endif %}
